--- a/src/index.htm
+++ b/src/index.htm
@@ -9,7 +9,7 @@
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"
     integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
   <script src="js/vendor/jqueryBrowser.js"></script>
-  <script src="https://unpkg.com/@panzoom/panzoom@4.4.4/dist/panzoom.min.js"></script>
+  <script src="https://unpkg.com/panzoom@9.4.0/dist/panzoom.min.js"></script>
   <script src="js/pako-inflate-2.0.4.min.js"></script>
   <script src="data/tilecolormap.js"></script>
   <script src="js/maploader.js"></script>
