--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 	<script src="js/mapmonitor.js"></script>
 </head>
 
-<body style="background-color: black" x-data="">
+<body style="background-color: black" x-data="" id="body" class="dark-mode">
 
 	<div class="offcanvas offcanvas-start text-bg-dark show" data-bs-backdrop="false" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
 		<div class="offcanvas-header">
